[gd_scene load_steps=19 format=3 uid="uid://cv6yalmlvdhfa"]

[ext_resource type="Script" uid="uid://frkrc0umc6o3" path="res://scripts/main_game.gd" id="1_fpdtd"]
[ext_resource type="Texture2D" uid="uid://oph734p5l0am" path="res://textures/icon.svg" id="2_1hpqh"]
[ext_resource type="Script" uid="uid://da3usqhb6ruuv" path="res://scripts/enemy_spawner.gd" id="5_vs82q"]
[ext_resource type="PackedScene" uid="uid://cr2w1348wljue" path="res://scenes/vento_player.tscn" id="6_7fyak"]
[ext_resource type="PackedScene" uid="uid://dhgljm2ocjttf" path="res://scenes/yeti_enemy.tscn" id="6_qsiih"]
[ext_resource type="PackedScene" uid="uid://bjmdyvmdf13iv" path="res://scenes/yeti_ranger_enemy.tscn" id="7_7d840"]

[sub_resource type="NavigationMesh" id="NavigationMesh_8dnxm"]
vertices = PackedVector3Array(13.0392, 0.1, -6.98175, 11.4392, 0.1, -5.38175, 17.4393, 0.1, 16.6183, 7.83925, 4.95, -10.5817, 7.83925, 4.95, -9.38175, 9.03925, 4.95, -9.38175, 9.03925, 4.95, -10.5817, 17.4393, 0.1, -16.9817, 13.0392, 0.1, -9.78175, 4.63925, 0.1, -5.78175, 3.83925, 0.1, -6.98175, -16.9608, 0.1, -16.9817, -16.9608, 0.1, 16.6183, 3.83925, 0.1, -12.9817, 5.43925, 0.1, -14.5817, 12.2393, 0.1, -14.1817, 13.0392, 0.1, -12.9817, 7.83925, 0.1, -14.5817)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(6, 5, 3), PackedInt32Array(3, 5, 4), PackedInt32Array(8, 7, 0), PackedInt32Array(0, 7, 2), PackedInt32Array(10, 9, 11), PackedInt32Array(11, 9, 12), PackedInt32Array(12, 9, 2), PackedInt32Array(11, 14, 13), PackedInt32Array(9, 1, 2), PackedInt32Array(11, 13, 10), PackedInt32Array(16, 15, 7), PackedInt32Array(8, 16, 7), PackedInt32Array(7, 15, 17), PackedInt32Array(17, 14, 7), PackedInt32Array(7, 14, 11)]
cell_size = 0.4
cell_height = 0.05
border_size = 3.0
agent_radius = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8qpgq"]
albedo_color = Color(0.32549, 0.537255, 0.101961, 1)

[sub_resource type="BoxMesh" id="BoxMesh_pv6b4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8dnxm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8dnxm"]
albedo_texture = ExtResource("2_1hpqh")
normal_texture = ExtResource("2_1hpqh")

[sub_resource type="BoxMesh" id="BoxMesh_v3hs3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x5ji8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3tbxw"]
sky_top_color = Color(0.62929, 0.691357, 0.777869, 1)
sky_horizon_color = Color(1.24091, 1.32471, 1.35946, 1)
ground_bottom_color = Color(0.305506, 0.578645, 0.631121, 1)
ground_horizon_color = Color(1.24091, 1.32471, 1.35946, 1)

[sub_resource type="Sky" id="Sky_e3m3f"]
sky_material = SubResource("ProceduralSkyMaterial_3tbxw")

[sub_resource type="Environment" id="Environment_ws5ob"]
background_mode = 2
sky = SubResource("Sky_e3m3f")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_8dnxm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_v3hs3"]

[node name="Node3D" type="Node3D" node_paths=PackedStringArray("secondsTimer", "minutesTimer")]
script = ExtResource("1_fpdtd")
secondsTimer = NodePath("Seconds Timer")
minutesTimer = NodePath("Minutes Timer")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_8dnxm")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(40.9915, 0, 0, 0, 1, 0, 0, 0, 40.1115, 0.335, -0.5, -0.126)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
material_overlay = SubResource("StandardMaterial3D_8qpgq")
mesh = SubResource("BoxMesh_pv6b4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
shape = SubResource("BoxShape3D_8dnxm")

[node name="StaticBody3D2" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 8.52983, 2.38434, -9.94689)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D2"]
material_overlay = SubResource("StandardMaterial3D_8dnxm")
mesh = SubResource("BoxMesh_v3hs3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D2"]
shape = SubResource("BoxShape3D_x5ji8")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ws5ob")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="EnemySpawner" type="Node3D" parent="." node_paths=PackedStringArray("spawnpoints")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.8278, 0.604012, 0)
script = ExtResource("5_vs82q")
yeti_scene = ExtResource("6_qsiih")
yeti_ranger_scene = ExtResource("7_7d840")
spawnpoints = NodePath("../Spawnpoints")

[node name="YetiTimer" type="Timer" parent="EnemySpawner"]
wait_time = 5.0
autostart = true

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 10.0177, 0, 0, 0, 1, 0, 0.114781, -6.02561)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_8dnxm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_v3hs3")

[node name="Spawnpoints" type="Node3D" parent="."]

[node name="Spawn1" type="Node3D" parent="Spawnpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.73552, 0, 10.7616)

[node name="Spawn2" type="Node3D" parent="Spawnpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.3971, 0, 2.51463)
top_level = true

[node name="Spawn3" type="Node3D" parent="Spawnpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5, 0, 16.5)
top_level = true

[node name="Spawn4" type="Node3D" parent="Spawnpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5, 0, -16.5)
top_level = true

[node name="Seconds Timer" type="Timer" parent="."]

[node name="Minutes Timer" type="Timer" parent="."]
wait_time = 60.0

[node name="VentoPlayer" parent="." groups=["player"] instance=ExtResource("6_7fyak")]

[connection signal="current_wave" from="." to="EnemySpawner" method="_on_current_wave_changed"]
[connection signal="timeout" from="EnemySpawner/YetiTimer" to="EnemySpawner" method="_on_yeti_timer_timeout"]
[connection signal="timeout" from="Seconds Timer" to="." method="_on_seconds_timer_timeout"]
[connection signal="timeout" from="Minutes Timer" to="." method="_on_minutes_timer_timeout"]
